# baktsiu

./:  not messed up dimensions.mp4.MediaInfo.txt  .gitignore  3.mkv.MediaInfo.txt  CMakeLists.txt  DOpus_baktsiu.js  Working.mp4.MediaInfo.txt  broken 2.mp4.MediaInfo.txt  broken.mp4.MediaInfo.txt  messed up dimensions.mp4.MediaInfo.txt
build-novideo/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  baktsiu.sln  cmake_install.cmake
build-novideo/ext/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build-novideo/ext/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build-novideo/ext/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
build-novideo/ext/glfw/src/glfw.dir/Release/: glfw3.lib.recipe
build-novideo/ext/glfw/src/glfw.dir/Release/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glfw.lastbuildstate
build-novideo/ext/spdlog/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  spdlog.sln  spdlog.vcxproj  spdlog.vcxproj.filters
build-novideo/ext/spdlog/spdlog.dir/Release/spdlog.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  spdlog.lastbuildstate
build-novideo/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  baktsiu.vcxproj  baktsiu.vcxproj.filters  cmake_install.cmake  res2c.vcxproj  res2c.vcxproj.filters  shader_resources.h
build-novideo/src/baktsiu.dir/Release/: baktsiu.exe.recipe  icon.res
build-novideo/src/baktsiu.dir/Release/baktsiu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
build-novideo/src/res2c.dir/Release/: res2c.exe.recipe
build-novideo/src/res2c.dir/Release/res2c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  res2c.lastbuildstate
build-novideo/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-novideo/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-novideo/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
docs/: quickstart_guide.md
ext/imgui/: imgui_widgets.cpp
shaders/: present.frag  statistics_rgba8.comp  video_blit.frag  video_blit.vert
src/: CMakeLists.txt  app.cpp  app.h  app_image.cpp  app_ui.cpp  app_video.cpp  common.h  image.cpp  image.h  main.cpp  media_source.h  mf_video_reader.cpp  mf_video_reader.h  mp4_iso_duration.cpp  mp4_iso_duration.h  mpv_gl_player.cpp  mpv_gl_player.h  shader.h  static_image_source.cpp  static_image_source.h  texture.cpp  texture.h  texture_pool.cpp  video_source.cpp  video_source.h
